# pytune_ai_router

./: .dockerignore  .env  Dockerfile  README.md  check_policies.ps1  deploy_ai_router.ps1  deploy_pytune_ai_router.sh  pyproject.toml  run.py
app/: check_openai_models.py  main.py
app/agents/: welcome_agent.yaml
app/core/: ai_router.py  context_enrichment.py  context_resolver.py  llm_connector.py  llm_engine.py  paths.py  policy_engine.py  policy_loader.py  prompt_builder.py  settings.py  templates.py
app/core/i18n/: resolver.py
app/core/llm_backends/: ollama_backend.py  openai_backend.py
app/handlers/: piano_agent_handler.py
app/models/: piano_guess_model.py  policy_model.py
app/routers/: agent_launcher_router.py  chat.py  chat_router.py  task_stream_router.py  tts_router.py
app/routers/agents/: piano_photos.py  welcome_agent_router.py
app/services/: age_resolver.py  age_resolver_vision.py  brand_resolver.py  brand_resolver_vision.py  email_sender.py  image_labelling.py  image_metadata_utils.py  model_resolver.py  music_enrichment.py  piano_extract.py  piano_guess_model.py  piano_identify_from_images_service.py  piano_logic.py  piano_report.py  resolve_model_fields.py  sanitizers.py  tts_service.py  type_resolver.py
app/static/agents/: common_structure_agents.yml  validate_policies.py  welcome_agent.yml
app/static/agents/prompts/: __prompt_piano_agent.j2  prompt_enrich_piano.j2  prompt_guess_model.j2  prompt_identify_piano.j2  prompt_model_enrichment.j2  prompt_music_source_finder.j2  prompt_piano_agent.j2  prompt_piano_agent_conversation.j2  prompt_profile_agent.j2  prompt_value_estimate_piano_value.j2  prompt_welcome_agent.j2
app/static/agents/templates/: _example_policy_template.yml  _old_piano_agent.yml  chat.yml  diagnosis_agent.yml  error_helper.yml  piano_agent.yml  piano_agent_mode_transition.yaml  profile_agent.yml  tuning_agent.yml  welcome.yml  welcome_agent.yml
app/static/agents/templates/diagnosis_agent/: policy.yml
app/static/agents/templates/piano_agent/: policy.yml
app/static/agents/templates/piano_agent/i18n/: en.json  fr.json
app/static/email_templates/: piano_summary_email.html
app/utils/: context_helpers.py  dontknow_utils.py  normalize_piano_data.py  piano_extract.py  piano_merge.py  templates.py  upload_images.py
