[project]
name = "pytune_ai_router"
version = "0.0.0"
description = "PyTune AI router microservice"
requires-python = ">=3.12"

[tool.poetry]
name = "pytune_ai_router"
version = "1.0.1"
description = "Routing layer for Ollama, OpenAI, Gemini, etc."
authors = ["Gabriel de Fombelle <gabriel.de.fombelle@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]   # code dans services/pytune_ai_router/app

[tool.poetry.dependencies]
python = ">=3.12,<4.0"

# API stack
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.34.0" }
pydantic = "^2.8.0"

# Networking / IO
httpx = "^0.27.2"
pyyaml = "^6.0.2"
aiofiles = "^24.1.0"
python-multipart = "^0.0.12"

# LLM clients (pinned raisonnable)
openai = "^1.35.0"
ollama = "^0.3.0"

# Infra (si utilisés dans ce service)
redis = "^5.0.7"
asyncpg = "^0.30.0"
tortoise-orm = "^0.20.0"
python-dotenv = "^1.0.1"

# Choisis UNE version commune pour TOUT ton monorepo. Je te conseille Pillow 11.x partout.
# -> Mets Pillow "^11.2.1" ici, ET aligne les autres packages qui utilisent Pillow sur "^11.2.1".
pillow = "^11.2.1"

# Si tu lis des HEIC/HEIF localement, garde pillow-heif, sinon commente-le.
# Sous Docker (Debian/Ubuntu slim) ça marche sans dépendances OS ; sous Alpine, parfois il manque des codecs.
pillow-heif = { version = "^1.0.0" }
sse-starlette = "^2.0.0"
# Templates
jinja2 = "^3.1.6"
# PDF util
fpdf = "^1.7.2"

# ---- DEV (monorepo, editable) + PROD ----
pytune_helpers_core = { git = "https://github.com/gdefombelle/pytune_helpers_core.git", branch = "main"}
pytune_helpers_images = {git  = "https://github.com/gdefombelle/pytune_helpers_images.git", branch = "main"}
pytune_llm = { git = "https://github.com/gdefombelle/pytune_llm.git", branch = "main" }
pytune_piano_i2i = { git = "https://github.com/gdefombelle/pytune_piano_i2i.git", branch = "main" }
pytune_auth_common = { git = "https://github.com/gdefombelle/pytune_auth_common.git" , branch = "main"}
pytune_configuration = { git = "https://github.com/gdefombelle/pytune_configuration.git", branch = "main"}
simple_logger = { git = "https://github.com/gdefombelle/simple_logger.git", branch = "main"}
pytune_data = { git  = "https://github.com/gdefombelle/pytune_data.git", branch = "main"}
pytune_helpers_messaging = { git = "https://github.com/gdefombelle/pytune_helpers_messaging.git", branch = "main" }





[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.8"
ruff = "^0.6.8"
mypy = "^1.11.1"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
